Changes with Apache 1.3a2

  *) PORT: Timings show that on Linux 2.0.30 flock is slightly cheaper than
     fcntl file locking.  So use flock for the mutexes. [Dean Gaudet]

  *) Fix another long-standing bug in sub_req_lookup_file where it would
     happily skip past access checks on subdirectories looked up with
     relative paths.  (It's used by mod_dir, mod_negotiation,
     and mod_include.) [Dean Gaudet]

  *) directory_walk optimization to reduce an O(N*M) loop to O(N+M) where
     N is the number of <Directory> sections, and M is the number of
     components in the filename of an object.

     To achieve this optimization the following config changes were made:
	- Wildcards (* and ?, not the regex forms) in <Directory>s,
	  <Files>s, and <Location>s now treat a slash as a special
	  character.  For example "/home/*/public_html" previously would
	  match "/home/a/andrew/public_html", now it only matches things
	  like "/home/bob/public_html".  This mimics /bin/sh behaviour.
	- It's possible now to use [] wildcarding in <Directory>, <Files>
	  or <Location>.
	- Regex <Directory>s are applied after all non-regex <Directory>s.

    [Dean Gaudet]
  
  *) Fix a bug introduced in 1.3a1 directory_walk regarding .htaccess files
     and corrupted paths.  [Dean Gaudet]

  *) Enhanced and cleaned up the URL rewriting engine of mod_rewrite:
     First the grouped parts of RewriteRule pattern matches (parenthesis!) can
     be accessed now via backreferences $1..$9 in RewriteConds test-against
     strings in addition to RewriteRules subst string. Second the grouped
     parts of RewriteCond pattern matches (parenthesis!) can be accessed now
     via backreferences %1..%9 both in following RewriteCond test-against
     strings and RewriteRules subst string. This provides maximum flexibility
     through the use of backreferences.
     Additionally the rewriting engine was cleaned up by putting common
     code to the new expand_backrefs_inbuffer() function. 